Feat(auth): create  login with email and passsword
